--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
-            <div class="logo">
+            <div class="logo" >
                 <a href="#">Piña Luis</a>
             </div>
             <nav id="nav">
@@ -34,10 +34,11 @@
     <section id="inicio" class="inicio">
         <di class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/to.jpg" alt="">
+                <img src="img/to.png" alt="">
             </div>
             <h1>Luis Enrique</h1>
-            <h2>Ingeniero en Computación - Analista de Soporte tecnico e infrestructura</h2>
+            <h2>Ingeniero en Computación</h2>
+            <h2>Desarrollador web Jr</h2>
             <d class="redes">
                 <a1 href="https://www.facebook.com/luislo1994"><i class="fa-brands fa-facebook-f"></i></a1>
                 <a2 href="https://twitter.com/LuisEnr14169551"><i class="fa-brands fa-twitter"></i></a2>
@@ -52,7 +53,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Luis Enrique López Zamora.</span> Soy Egresado de la carrera de ingenieria en computación de la UAEM (Universidad Autonoma del Estado de Mexico), me considero una persona muy proactiva y me gusta mucho el sushi a igual que aprender o probar cosas nuevas, actualmente llevo 11 meses laborando de analista en soporte tecnico.</p>
+            <p><span>Hola, soy Luis Enrique López Zamora.</span> Soy Egresado de la carrera de ingenieria en computación de la UAEM (Universidad Autonoma del Estado de Mexico), me considero una persona muy proactiva y me gusta mucho el sushi a igual que aprender o probar cosas nuevas, actualmente llevo 1 año 4 meses laborando de analista en la empresa de Ahorra Seguros.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -81,7 +82,7 @@
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>Analista de soporte e infrestructura</span>
+                            <span>Desarrollo Web Crm Jr</span>
                         </li>
                     </ul>
                 </div>
@@ -280,7 +281,7 @@
                         <h4>Ing. en Computación</h4>
                         <span class="casa">Universidad Autonoma del Estado de Mexico</span>
                         <span class="fecha">2018 - 2023</span>
-                        <p>Desarrador de software - José Revuelta 17, Tierra Blanca, 55020 Ecatepec de Morelos, Méx.
+                        <p>Desarrollador de software - José Revuelta 17, Tierra Blanca, 55020 Ecatepec de Morelos, Méx.
                         </p>
                         <div class="conectori">
                             <div class="circuloi"></div>
@@ -307,6 +308,18 @@
                 </div>
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
+
+                    
+                    <div class="item der">
+                        <h4>Desarrollador Web Crm jr</h4>
+                        <span class="casa">Ahorra Seguros</span>
+                        <span class="fecha">2024 - Actualmente Laborando</span>
+                        <p>Francisco Tamagno 223, Vallejo, Gustavo A. Madero, 07870 Ciudad de México, CDMX</p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+
                     <div class="item der">
                         <h4>Analista en Soporte Tecnico e Infrestructura</h4>
                         <span class="casa">Ahorra Seguros</span>
@@ -333,7 +346,6 @@
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
